# hs80tray

./: 99-corsair-hid.rules  CMakeLists.txt  LICENSE  README.md  main.cpp
